--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -10,6 +10,8 @@
     align-items: center;
     width: 99%;
     margin: 0;
+    backdrop-filter: blur(5px);
+
 }
 .modal-content{
     width: 50%;
@@ -22,11 +24,31 @@
     padding: 12px;
 }
 .modal-body{
-    padding: 20px;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
+    position: absolute;
+    width: 40%;
+    height: 70%;
+    left: 40%;
+    top: 0.1%;
+
+    filter: drop-shadow(5px 4px 21px rgba(0, 0, 0, 0.1));
+
+    border-radius: 26px;
 }
 .modal-footer{
     display: flex;
     justify-content: space-between;
 }
+.modal-employee{
+    background: #FFFFFF;
+    border-radius: 26px;
+    margin-top: 100px;
+
+    width: 100%;
+    height: 30%;
+    filter: drop-shadow(12px 13px 20px rgba(100, 57, 195, 0.15));
+}
+.modal-employee p{
+    margin-left: 4%;
+    margin-top: 2%;
+}
+
