--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -15,7 +15,6 @@
 }
 .modal-content{
     width: 50%;
-    background-color: #FFFFFF;
 }
 .modal-header{
 
@@ -46,9 +45,60 @@
     width: 100%;
     height: 30%;
     filter: drop-shadow(12px 13px 20px rgba(100, 57, 195, 0.15));
+    font-size: 16px;
 }
 .modal-employee p{
     margin-left: 4%;
     margin-top: 2%;
+    font-size: 16px;
+}
+.modal-hud{
+    position: absolute;
+    top: 1.5%;
+    left: 5%;
+    width: 20%;
+    height: 7%;
+    color: #FFFFFF;
+    font-size: 24px;
+
+    background: linear-gradient(90deg, #6439C3 4.8%, #8B56FF 100%);
+    border-radius: 17px;
+}
+.modal-hud p{
+    font-size: 24px;
+    margin-top: 12px;
+    margin-left: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+}
+.back-button{
+    background-image: url("../Static/Images/back_button.svg");
+    border: 0;
+    background-repeat: no-repeat;
+    width: 76px;
+    height: 76px;
+    border-radius: 45px;
+
+    position: absolute;
+    top: 1%;
+    left: 0.5%;
+}
+.next-button{
+    background-image: url("../Static/Images/back_button.svg");
+    border: 0;
+    background-repeat: no-repeat;
+    width: 76px;
+    height: 76px;
+    border-radius: 45px;
+
+    position: absolute;
+    top: 50%;
+    left: 82%;
+    transform: rotate(180deg);
+
 }
 
