--- a/client/src/index.css
+++ b/client/src/index.css
@@ -184,6 +184,7 @@ input{
     display: flex;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(5px);
 }
 .modalTasks{
     position: fixed;
@@ -196,11 +197,13 @@ input{
 }
 
 .modal{
+    position: absolute;
     width: 500px;
     background-color: rgb(255, 255, 255);
     padding: 40px;
     border-radius: 10px;
-    margin-left: 20%;
+    margin-left: 5%;
+    top: 5%;
     box-shadow: rgb(0,0,0,0.05) 0 6px 24px 0, rgba(0,0,0,0.08) 0 0 0 1px;
 }
 .modal .form-title-container{
